# proto-pipe

./: .gitignore  README.md  corrections.py  ingest.py  multi_select_changes.py  pyproject.toml  test_ingest_corrections_runner.py
config/: pipeline.yaml  reports_config.yaml  sources_config.yaml
docs/: _config.yml  adding_checks.md  adding_deliverables.md  adding_reports.md  first_time_setup.md  index.md  quickstart.md  reviewing_flagged_rows.md
src/: __init__.py  cli.py  cli_old.py  main.py
src/checks/: helpers.py  runner.py
src/cli/: __init__.py  data.py  init.py  (+5 more)
tests/: conftest.py  test_alias_map_features.py  test_build_deliverable_sql.py  test_bulk_validation_pass.py  test_check_param.py  test_checks.py  test_checks_runner.py  test_cli_commands.py  test_col_history_preselect.py  test_compute_write_split.py  test_config_settings.py  test_contract_execution.py  test_custom_checks.py  test_data_layer.py  test_db.py  test_deliverable_macro_guarantee.py  test_deliverables.py  test_e2e_excel_workflow.py  test_file_failure.py  test_fill_params_fixes.py  test_flagging.py  test_ingest.py  test_ingest_corrections_runner.py  test_inspector_multiselect.py  test_integrity_and_registry.py  test_macro_loader.py  test_macro_registry.py  test_new_deliverable_guarantees.py  test_new_source_and_blank_cols.py  test_output_scoping.py  test_pipeline_events.py  test_query.py  test_refresh.py  test_report_prompter.py  test_runner.py  test_runner_column_backed.py  test_scaffold.py  test_scalar_column_injection.py  test_series_injection.py  test_source_pass_source_block_invariant.py  (+10 more)
(+85 files in other folders)
