[project]
name = "proto-pipe"
version = "0.1.12"
description = "A basic cli data pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "duckdb>=1.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pytz>=2026.1.post1",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "ruamel-yaml>=0.19.1",
    "textual>=8.2.1",
]

[project.scripts]
vp = "proto_pipe.cli:cli"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proto_pipe = ["templates/*.yaml"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
